# loresmith

./: .gitignore  LICENSE  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py  002_unique_content_hash.py  003_passages_game_content_hash.py  004_passages_source_scoped_uniqueness_and_hnsw.py  005_chat_session_owner_token.py  006_passages_embedding_identity.py  007_semantic_cache_scope_columns.py  008_chat_message_response_meta.py
backend/app/: auth.py  config.py  games.py  main.py  services.py
backend/app/adapters/: base.py  hades.py  hades2.py
backend/app/db/: models.py  session.py
backend/app/entities/: extractor.py  schema.py  store.py
backend/app/eval/: __init__.py  ablations.py  judge.py  metrics.py  report.py  runner.py  source_identity.py
backend/app/ingestion/: chunker.py  embedder.py  local_embedder.py  pipeline.py  review_spoilers.py  scraper.py  spoiler_tagger.py
backend/app/llm/: base.py  gemini.py  ollama.py  router.py  tools.py
backend/app/rag/: citations.py  pipeline.py  refusal.py  rewriter.py  semantic_cache.py  verifier.py
backend/app/retrieval/: bm25.py  dense.py  hybrid.py  reranker.py
backend/app/tracing/: langfuse.py
backend/tests/: conftest.py  test_config.py  test_endpoints.py  test_eval_dataset.py  test_eval_dataset_hades2.py  test_eval_pipeline_smoke.py  test_eval_runner.py  test_healthz.py  test_main_pipeline_cache.py
backend/tests/adapters/: test_base.py  test_hades.py  test_hades2.py
backend/tests/db/: test_migration.py  test_models.py  (+2 more)
(+51 files in other folders)
