[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loresmith-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "google-genai>=1.0",
    "langfuse>=2.0",
    "sentry-sdk[fastapi]>=2.0",
    "jinja2>=3.1",
    "rank-bm25>=0.2",
    "selectolax>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.7",
    "ruff>=0.9",
]
local = [
    "sentence-transformers>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
